完善接口文档

--- a/接口v1.1.md
+++ b/接口v1.1.md
@@ -332,8 +332,10 @@
 14. PUT `/api/seller/purchase-intents/{purchase_id}/status` 卖家处理购买意向，修改其状态（如成功、失败）并备注。请求体：
 ```json
 {
-  "new_status": String,   // "success" | "failed"
-  "seller_notes": String (可选)
+  "new_status": String,   // "SELLER_CONFIRMED" | "STOCK_PREPARED" | "SHIPPING_STARTED" | "COMPLETED" | "SELLER_CANCELLED"
+  "seller_notes": String (可选),
+  "cancel_reason": String (可选，仅在new_status为"SELLER_CANCELLED"时使用),
+  "cancel_notes": String (可选，仅在new_status为"SELLER_CANCELLED"时使用)
 }
 ```
 响应 data 示例（更新后的意向）：
@@ -342,10 +344,15 @@
   "purchase_id": Number,
   "product_id": Number,
   "customer_id": Number | null,
+  "customer_name": String,
+  "customer_phone": String,
+  "customer_address": String,
   "quantity": Number,
   "total_amount": Number,
   "purchase_status": String,
   "seller_notes": String | null,
+  "cancel_reason": String | null,
+  "cancel_notes": String | null,
   "created_at": String,
   "updated_at": String
 }
@@ -593,7 +600,7 @@
     }
   ```
 
-### 21： 客户取消订单
+### 21： 客户确认收货
 
 - 方法：POST
 
