收藏商品功能

--- a/接口v1.2.md
+++ b/接口v1.2.md
@@ -853,7 +853,7 @@
         "stock_quantity": Number,
         "product_status": String
       },
-      "favorited_at": String
+      "created_at": String
     }
   ]
 }
@@ -868,6 +868,7 @@
 ```text
 {
   "favorite_id": Number,
+  "customer_id": Number,
   "message": "取消收藏成功",
   "updated_at": String
 }
